groovy: version back to 1.0.0-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1622072 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/groovy/pom.xml
+++ b/contrib/scripting/groovy/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>org.apache.sling</groupId>
     <artifactId>org.apache.sling.scripting.groovy</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Scripting Groovy Support</name>
