SLING-3906 - JUnit Remote Tests Runners: dependency on org.apache.sling.testing.tools.sling needs to be optional
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/testing/junit/remote@1622231 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
                         <Import-Package>
                             org.apache.http.*; resolution:=optional,
                             org.apache.sling.testing.tools.http; resolution:=optional,
+                            org.apache.sling.testing.tools.sling; resolution:=optional,
                             org.junit.internal.*; resolution:=optional,
                             *
                         </Import-Package>
