--- a/pom.xml
+++ b/pom.xml
@@ -378,7 +378,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.replication</artifactId>
+            <artifactId>org.apache.sling.replication.core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
