Replication - correct dependency from replication.it to replication.core
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1622318 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/replication/it/pom.xml
+++ b/contrib/extensions/replication/it/pom.xml
@@ -378,7 +378,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.replication</artifactId>
+            <artifactId>org.apache.sling.replication.core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
