--- a/installer/providers/file/pom.xml
+++ b/installer/providers/file/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.installer.core</artifactId>
-            <version>3.5.5-SNAPSHOT</version>
+            <version>3.5.4</version>
             <scope>provided</scope>
         </dependency>
       <!-- We use a class from the config admin implementation to read config files -->
