--- a/installer/providers/jcr/pom.xml
+++ b/installer/providers/jcr/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.installer.core</artifactId>
-            <version>3.5.5-SNAPSHOT</version>
+            <version>3.5.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
