--- a/testing/resourceresolver-mock/pom.xml
+++ b/testing/resourceresolver-mock/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
 </project>
