SLING-3915 : Launchpad ControlListener improvement
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1623995 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/base/pom.xml
+++ b/launchpad/base/pom.xml
@@ -43,6 +43,7 @@
 
     <properties>
         <felix.httpservice.version>2.2.0</felix.httpservice.version>
+        <sling.java.version>6</sling.java.version>
     </properties>
 
     <scm>
