--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-launchpad-integration-tests/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-launchpad-integration-tests/pom.xml
@@ -133,6 +133,9 @@
               </execution>
             </executions>
             <configuration>
+              <systemPropertyVariables>
+                <jar.executor.server.port>8888</jar.executor.server.port>
+              </systemPropertyVariables>
               <dependenciesToScan>
                 <dependency>org.apache.sling:org.apache.sling.launchpad.integration-tests</dependency>
               </dependenciesToScan>
@@ -156,10 +159,8 @@
                 <exclude>org/apache/sling/launchpad/webapp/integrationtest/JUnitCategoriesTest.*</exclude>
                 <exclude>org/apache/sling/launchpad/webapp/integrationtest/JspForwardTest.*</exclude>
                 <exclude>org/apache/sling/launchpad/webapp/integrationtest/LaunchpadConfigInstallerTest.*</exclude>
-                <exclude>org/apache/sling/launchpad/webapp/integrationtest/ResourceResolverProxyTest.*</exclude>
                 <exclude>org/apache/sling/launchpad/webapp/integrationtest/ServerSideScriptsTest.*</exclude>
                 <exclude>org/apache/sling/launchpad/webapp/integrationtest/ServletResolverConfigTest.*</exclude>
-                <exclude>org/apache/sling/launchpad/webapp/integrationtest/WriteableResourcesProxyTest.*</exclude>
                 <exclude>org/apache/sling/launchpad/webapp/integrationtest/servlets/resolution/WarSelectorServletTest.*</exclude>
               </excludes>
               <forkMode>always</forkMode>
