--- a/bundles/jcr/jackrabbit-server/pom.xml
+++ b/bundles/jcr/jackrabbit-server/pom.xml
@@ -166,7 +166,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.jcr.base</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
+            <version>2.2.2</version>
             <scope>provided</scope>
         </dependency>
 
