--- a/bundles/jcr/jackrabbit-server/pom.xml
+++ b/bundles/jcr/jackrabbit-server/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>org.apache.sling.jcr.jackrabbit.server</artifactId>
     <packaging>bundle</packaging>
-    <version>2.1.3-SNAPSHOT</version>
+    <version>2.2.0</version>
 
     <name>Apache Sling Jackrabbit Embedded Repository</name>
     <description>
@@ -37,9 +37,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/jcr/jackrabbit-server</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/jcr/jackrabbit-server</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/jcr/jackrabbit-server</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.jcr.jackrabbit.server-2.2.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.jcr.jackrabbit.server-2.2.0</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.jcr.jackrabbit.server-2.2.0</url>
     </scm>
 
     <properties>
