--- a/bundles/jcr/contentloader/pom.xml
+++ b/bundles/jcr/contentloader/pom.xml
@@ -142,8 +142,8 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sling</groupId>
-      <artifactId>org.apache.sling.engine</artifactId>
-      <version>2.0.6</version>
+      <artifactId>org.apache.sling.settings</artifactId>
+      <version>1.1.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
