--- a/bundles/jcr/contentloader/pom.xml
+++ b/bundles/jcr/contentloader/pom.xml
@@ -29,16 +29,16 @@
   </parent>
 
   <artifactId>org.apache.sling.jcr.contentloader</artifactId>
-  <version>2.1.10</version>
+  <version>2.1.11-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Apache Sling Initial Content Loader</name>
   <description>This bundle provides initial content installation through bundles.</description>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.jcr.contentloader-2.1.10</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.jcr.contentloader-2.1.10</developerConnection>
-    <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.jcr.contentloader-2.1.10</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/jcr/contentloader</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/jcr/contentloader</developerConnection>
+    <url>http://svn.apache.org/viewvc/sling/trunk/bundles/jcr/contentloader</url>
   </scm>
 
   <build>
