SLING-3952 - applied Marius Petria's patch for fixing usage of wrong id in JHReplicationQueue, minor fixes to javadoc and logging
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1625933 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/replication/core/pom.xml
+++ b/contrib/extensions/replication/core/pom.xml
@@ -35,9 +35,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
-    <name>Apache Sling Replication</name>
+    <name>Apache Sling Replication Core</name>
     <description>
-        The Apache Sling Replication bundle provides a set of utilities to replicate content from / to other Sling instances.
+        The Apache Sling Replication core bundle provides a set of utilities to replicate content from / to other Sling instances.
     </description>
 
     <scm>
