--- a/eclipse-m2e-ui/plugin.xml
+++ b/eclipse-m2e-ui/plugin.xml
@@ -53,4 +53,8 @@
                 secondaryTo="maven-bundle-plugin">
         </configurator>
     </extension>
-</plugin>    
+	<extension point="org.eclipse.m2e.core.archetypeCatalogs">
+		<remote url="http://repo1.maven.org/maven2/"
+			description="Maven Central"/>
+	</extension>    
+</plugin>
