SLING-3960 - adding validation to adapters and adaptables, both at registration time and in the web console.
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1626854 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/adapter/pom.xml
+++ b/bundles/extensions/adapter/pom.xml
@@ -153,5 +153,11 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit-addons</groupId>
+            <artifactId>junit-addons</artifactId>
+            <version>1.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
