SLING-3972 : Remove openid from launchpad
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1627301 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -82,6 +82,7 @@
 
     <!-- List modules to be included in the build here ! -->
     <modules>
+          <module>auth/openid</module>
           <module>auth/org.apache.sling.auth.xing.api</module>
           <module>auth/org.apache.sling.auth.xing.login</module>
           <module>auth/org.apache.sling.auth.xing.oauth</module>
