Remove auth selector from launchpad and move bundle to contrib section
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1627457 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -86,8 +86,11 @@
           <module>auth/org.apache.sling.auth.xing.api</module>
           <module>auth/org.apache.sling.auth.xing.login</module>
           <module>auth/org.apache.sling.auth.xing.oauth</module>
+          <module>auth/selector</module>
+
           <module>commons/fsclassloader</module>
           <module>commons/html</module>
+
           <module>extensions/apt/parser</module>
           <module>extensions/apt/servlet</module>
           <module>extensions/collection</module>
