SLING-3901 - replication triggers to substitute rules, allowing separate and k-v config
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1627757 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/replication/core/pom.xml
+++ b/contrib/extensions/replication/core/pom.xml
@@ -68,12 +68,12 @@
                   <Bundle-SymbolicName>org.apache.sling.replication</Bundle-SymbolicName>
                   <Sling-Initial-Content>SLING-CONTENT/libs/sling/replication;path:=/libs/sling/replication;overwrite:=true</Sling-Initial-Content>
                   <Export-Package>
-                    org.apache.sling.replication.agent,
-                    org.apache.sling.replication.communication,
-                    org.apache.sling.replication.event,
-                    org.apache.sling.replication.queue,
-                    org.apache.sling.replication.rule,
-                    org.apache.sling.replication.packaging
+                      org.apache.sling.replication.agent,
+                      org.apache.sling.replication.communication,
+                      org.apache.sling.replication.event,
+                      org.apache.sling.replication.queue,
+                      org.apache.sling.replication.trigger,
+                      org.apache.sling.replication.packaging
                   </Export-Package>
                   <Embed-Dependency>httpasyncclient</Embed-Dependency>
                 </instructions>
