--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -111,6 +111,7 @@
           <module>extensions/rewriter</module>
           <module>extensions/tenant</module>
           <module>extensions/replication/core</module>
+          <module>extensions/replication/sample</module>
           <module>extensions/replication/it</module>
           <module>extensions/sling-query</module>
           <module>jcr/compiler</module>
