SLING-3981 : Make dependency to config admin optional
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1628645 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/settings/pom.xml
+++ b/bundles/extensions/settings/pom.xml
@@ -71,10 +71,11 @@
                             org.apache.sling.settings.impl.Activator
                         </Bundle-Activator>
                         <DynamicImport-Package>
-                            org.osgi.service.cm
+                            org.osgi.service.cm,
+                            org.apache.felix.shell
                         </DynamicImport-Package>
                         <Import-Package>
-                            !org.osgi.service.cm,
+                            org.osgi.service.cm;resolution:=optional,
                             org.apache.felix.shell;resolution:=optional, 
                             *
                         </Import-Package>
