SLING-4000 - Add error marker on the project when content sync root does not exist
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1629064 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-core/plugin.xml
+++ b/eclipse-core/plugin.xml
@@ -213,4 +213,19 @@
       	</include>
       </validator>
    </extension>
+   
+   <extension
+         id="contentProjectValidator"
+         point="org.eclipse.wst.validation.validatorV2"
+         name="Sling Content Project Validator">
+      <validator class="org.apache.sling.ide.eclipse.internal.validation.ContentProjectValidator">
+      	<include>
+          <rules>
+          	<facet
+                 id="sling.content">
+          	</facet>
+          </rules>
+      	</include>
+      </validator>
+   </extension>
 </plugin>    
