Include validation in the contrib reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1629911 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -131,6 +131,7 @@
           <module>scripting/thymeleaf</module>
           <module>scripting/velocity</module>
           <module>scripting/xproc</module>
+          <module>validation</module>
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
     </modules>
