SLING-3479 - Upgrade to Oak 1.0
Pick up the latest launchpad version in launchpad/testing

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1630220 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/testing/pom.xml
+++ b/launchpad/testing/pom.xml
@@ -160,7 +160,7 @@
                 </executions>
                 <configuration>
                     <defaultBundleList>
-                        <version>${project.version}</version>
+                        <version>8-SNAPSHOT</version>
                     </defaultBundleList>
                     <jarWebSupport>
                         <groupId>org.apache.felix</groupId>
