SLING-3991 - Support Password Change Upon Expiry Via SimpleCredentials Attribute (applied patch from Dominique Jaeggi)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1630560 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/auth/core/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/auth/core/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -96,6 +96,11 @@ auth.sudo.parameter.description = The name of the request parameter initiating \
  impersonated session (instead of the actually authenticated session) and set \
  a session cookie of the name defined in the Impersonation Cookie setting.
 
+auth.newpassword.parameter.name = New Password Parameter
+auth.newpassword.parameter.description = The name of the request POST parameter \
+ used for changing the password alongside a login request when the user's password \
+ has expired.
+
 auth.http.name = HTTP Basic Authentication
 auth.http.description = Level of support for HTTP Basic Authentication. Such \
  support can be provided in three levels: (1) no support at all, that is \
