SLING-4021  - Set publish interval to 0 when creating a new server
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1630609 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -70,7 +70,17 @@
          typeIds="org.apache.sling.ide.launchpadServer"
          class="org.apache.sling.ide.eclipse.ui.internal.InstallEditorSection">
       </section>
-   </extension>   
+   </extension>
+   
+   <!-- hook in the server creation wizard -->
+    <extension
+          point="org.eclipse.wst.server.ui.wizardFragments">
+       <fragment
+             class="org.apache.sling.ide.eclipse.ui.wizards.OverridePublishIntervalFragment"
+             id="org.apache.sling.ide.eclipse.ui.wizards.SomeWizardFragment"
+             typeIds="org.apache.sling.ide.launchpadServer">
+       </fragment>
+    </extension>   
   
   <!-- Runtime images -->
     <extension point="org.eclipse.wst.common.project.facet.ui.images">
