SLING-4028 - Allow printing tracing output to the console
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1630985 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-core/build.properties
+++ b/eclipse-core/build.properties
@@ -2,7 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                .options,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/
 jars.compile.order = .,\
                      commons-httpclient.jar
 source.. = src/
