Add dea to reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1631365 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
         <!-- Extensions -->
         <module>bundles/extensions/adapter</module>
         <module>bundles/extensions/bundleresource</module>
+        <module>bundles/extensions/dea</module>
         <module>bundles/extensions/discovery/api</module>
         <module>bundles/extensions/discovery/impl</module>
         <module>bundles/extensions/discovery/support</module>
