SLING-4048 : Avoid keeping jobs in memory. Rewrite statistics, queue and topic handling (WiP)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1632141 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/pom.xml
+++ b/bundles/extensions/event/pom.xml
@@ -116,7 +116,7 @@
                         -Xmx2048m -XX:MaxPermSize=512m
                     </argLine>
                     <includes>
-                        <include>**/it/*</include>
+                        <include>**/it/OrderedQueueTest*</include>
                     </includes>
                 </configuration>
             </plugin>
